--- a/i3/settings/keybindings.conf
+++ b/i3/settings/keybindings.conf
@@ -116,6 +116,9 @@ mode "(S)uspend, (L)ogout, (R)eboot, (P)oweroff" {
 # Lock screen
 bindsym $mod+Shift+x exec betterlockscreen -l dim
 
+# Open Thunar with Super+f
+bindsym $mod+Shift+f exec thunar
+
 # Assign applications to workspaces
 for_window [class="firefox"] move to workspace $ws1
 for_window [class="GitHub Desktop"] move to workspace $ws2
